matlab/recon2.04: Fix malformed gene association

--- a/matlab/recon2.04/reactions.yaml
+++ b/matlab/recon2.04/reactions.yaml
@@ -11252,8 +11252,9 @@
   subsystem: Histidine metabolism
 - id: H2CO3D
   name: carboxylic acid dissociation
-  genes: (761.1) or (771.1) or (377677.1) or (762.1) or (766.2) or (23632.1) or (766.1)
-    or (771.2) or (759.1) or (768.1) or (760.1) or (765.1) or ()
+  genes: >
+    761.1 or 771.1 or 377677.1 or 762.1 or 766.2 or 23632.1 or 766.1 or
+    771.2 or 759.1 or 768.1 or 760.1 or 765.1
   equation: '|h2o[c]_| + |co2[c]_| <=> |h[c]_| + |hco3[c]_|'
   subsystem: Miscellaneous
 - id: H2CO3Dm
