Strip whitespace from iFF708 properties

--- a/sbml/iFF708/reactions.yaml
+++ b/sbml/iFF708/reactions.yaml
@@ -1072,7 +1072,7 @@
   name: Malate synthase 2, glyoxysomal
   genes: YIR031C
   equation: '|M_m170[C_c]| + |M_m419[C_c]| => |M_m268[C_c]| + |M_m533[C_c]|'
-  subsystem: 'Anaplerotic reactions '
+  subsystem: Anaplerotic reactions
 - id: R_DCD1_1
   name: Deoxycytidylate deaminase
   genes: YHR144C
@@ -1464,7 +1464,7 @@
   name: Fructose-1,6-bisphosphatase
   genes: YLR377C
   equation: '|M_m224[C_c]| => |M_m225[C_c]| + |M_m622[C_c]|'
-  subsystem: 'Anaplerotic reactions '
+  subsystem: Anaplerotic reactions
 - id: R_FBP26
   name: Fructose-2,6-bisphosphatase
   genes: YJL155C
@@ -2510,12 +2510,12 @@
   name: Isocitrate lyase
   genes: YER065C
   equation: '|M_m462[C_c]| => |M_m419[C_c]| + |M_m736[C_c]|'
-  subsystem: 'Anaplerotic reactions '
+  subsystem: Anaplerotic reactions
 - id: R_ICL2
   name: Mitochondrial 2-methylisocitrate lyase
   genes: YPR006C
   equation: '|M_m462[C_c]| => |M_m419[C_c]| + |M_m736[C_c]|'
-  subsystem: 'Anaplerotic reactions '
+  subsystem: Anaplerotic reactions
 - id: R_IDH1
   name: Isocitrate dehydrogenase [NAD] subunit 1, mitochondrial
   genes: YNL037C
@@ -2831,7 +2831,7 @@
   name: NAD-dependent malic enzyme, mitochondrial
   genes: YKL029C
   equation: '|M_m534[C_m]| + |M_m586[C_m]| => |M_m266[C_m]| + |M_m588[C_m]| + |M_m691[C_m]|'
-  subsystem: 'Anaplerotic reactions '
+  subsystem: Anaplerotic reactions
 - id: R_MAL12
   name: Alpha-glucosidase MAL12
   genes: YGR292W
@@ -2978,7 +2978,7 @@
   name: Malate synthase 1, glyoxysomal
   genes: YNL117W
   equation: '|M_m170[C_c]| + |M_m419[C_c]| => |M_m268[C_c]| + |M_m533[C_c]|'
-  subsystem: 'Anaplerotic reactions '
+  subsystem: Anaplerotic reactions
 - id: R_MMP1
   name: S-methylmethionine permease 1
   genes: YLL061W
@@ -3188,7 +3188,7 @@
   name: Phosphoenolpyruvate carboxykinase [ATP]
   genes: YKR097W
   equation: '|M_m220[C_c]| + |M_m625[C_c]| => |M_m187[C_c]| + |M_m265[C_c]| + |M_m662[C_c]|'
-  subsystem: 'Anaplerotic reactions '
+  subsystem: Anaplerotic reactions
 - id: R_PCM1_1
   name: Phosphoacetylglucosamine mutase
   genes: YEL058W
@@ -3682,13 +3682,13 @@
   genes: YGL062W
   equation: '|M_m220[C_c]| + |M_m265[C_c]| + |M_m690[C_c]| => |M_m187[C_c]| + |M_m622[C_c]|
     + |M_m625[C_c]|'
-  subsystem: 'Anaplerotic reactions '
+  subsystem: Anaplerotic reactions
 - id: R_PYC2
   name: Pyruvate carboxylase 2
   genes: YBR218C
   equation: '|M_m220[C_c]| + |M_m265[C_c]| + |M_m690[C_c]| => |M_m187[C_c]| + |M_m622[C_c]|
     + |M_m625[C_c]|'
-  subsystem: 'Anaplerotic reactions '
+  subsystem: Anaplerotic reactions
 - id: R_PYK2
   name: Pyruvate kinase 2
   genes: YOR347C
