Strip whitespace from iIT341 properties

--- a/sbml/iJN678/compounds.yaml
+++ b/sbml/iJN678/compounds.yaml
@@ -1649,7 +1649,7 @@
   charge: 0
 - id: M_h2mb4p_c
   name: '1-hydroxy-2-methyl-2-(E)-butenyl 4-diphosphate '
-  formula: 'C5H9O8P2 '
+  formula: C5H9O8P2
   charge: -3
 - id: M_h2o2_c
   name: Hydrogen peroxide
