--- a/sbml/iJN678/reactions.yaml
+++ b/sbml/iJN678/reactions.yaml
@@ -3109,7 +3109,7 @@
   name: phospho-N-acetylmuramoyl-pentapeptide-transferase (meso-2,6-diaminopimelate)
   genes: sll0657
   equation: '|M_udcpp_c[c]| + |M_ugmda_c[c]| => |M_ump_c[c]| + |M_uagmda_c[c]|'
-  subsystem: 'Peptidoglycan biosynthesis '
+  subsystem: Peptidoglycan biosynthesis
 - id: R_PAPSR
   name: phosphoadenylyl-sulfate reductase (thioredoxin)
   genes: slr1791
@@ -3494,12 +3494,12 @@
   name: Flypase
   genes: slr0488
   equation: '|M_peptido_syn_c[c]| => |M_peptido_syn_p[p]|'
-  subsystem: 'Peptidoglycan biosynthesis '
+  subsystem: Peptidoglycan biosynthesis
 - id: R_PPTGS_Syn
   name: Peptidoglycan subunit synthesis Synechocystis sp. PCC6803
   genes: sll1833
   equation: '|M_uaagmda_c[c]| => |M_h_c[c]| + |M_peptido_syn_c[c]| + |M_udcpdp_c[c]|'
-  subsystem: 'Peptidoglycan biosynthesis '
+  subsystem: Peptidoglycan biosynthesis
 - id: R_PRAGS
   name: phosphoribosylglycinamide synthetase
   genes: slr1159
@@ -4197,7 +4197,7 @@
   genes: slr0528
   equation: '|M_atp_c[c]| + |M_26dap_DASH_M_c[c]| + |M_uamag_c[c]| => |M_adp_c[c]|
     + |M_h_c[c]| + |M_pi_c[c]| + |M_ugmd_c[c]|'
-  subsystem: 'Peptidoglycan biosynthesis '
+  subsystem: Peptidoglycan biosynthesis
 - id: R_UAG2EMA
   name: UDP-N-acetyl-D-glucosamine 2-epimerase (Hydrolysis)
   genes: slr0624
@@ -4223,7 +4223,7 @@
     N-acetylglucosamine transferase
   genes: slr1656
   equation: '|M_uagmda_c[c]| + |M_uacgam_c[c]| => |M_h_c[c]| + |M_udp_c[c]| + |M_uaagmda_c[c]|'
-  subsystem: 'Peptidoglycan biosynthesis '
+  subsystem: Peptidoglycan biosynthesis
 - id: R_UAMAGS
   name: UDP-N-acetylmuramoyl-L-alanyl-D-glutamate synthetase
   genes: sll2010
@@ -4245,7 +4245,7 @@
   name: undecaprenyl-diphosphatase
   genes: sll0210
   equation: '|M_h2o_c[c]| + |M_udcpdp_c[c]| => |M_h_c[c]| + |M_pi_c[c]| + |M_udcpp_c[c]|'
-  subsystem: 'Peptidoglycan biosynthesis '
+  subsystem: Peptidoglycan biosynthesis
 - id: R_UDPDPS
   name: undecaprenyl-diphosphate synthase
   genes: sll0506
@@ -4262,18 +4262,18 @@
   genes: slr1351
   equation: '|M_atp_c[c]| + |M_alaala_c[c]| + |M_fdxr_DASH_2_2_c[c]| + |M_uGgl_c[c]|
     => |M_adp_c[c]| + |M_pi_c[c]| + |M_fdxo_DASH_2_2_c[c]| + |M_uGgla_c[c]|'
-  subsystem: 'Peptidoglycan biosynthesis '
+  subsystem: Peptidoglycan biosynthesis
 - id: R_UGLT
   name: UDPglucose--hexose-1-phosphate uridylyltransferase
   equation: '|M_gal1p_c[c]| + |M_udpg_c[c]| <=> |M_udpgal_c[c]| + |M_g1p_c[c]|'
-  subsystem: 'Peptidoglycan biosynthesis '
+  subsystem: Peptidoglycan biosynthesis
 - id: R_UGMDDS
   name: UDP-N-acetylmuramoyl-L-alanyl-D-glutamyl-meso-2,6-diaminopimeloyl-D-alanyl-D-alanine
     synthetase
   genes: slr1351
   equation: '|M_atp_c[c]| + |M_alaala_c[c]| + |M_ugmd_c[c]| => |M_adp_c[c]| + |M_h_c[c]|
     + |M_pi_c[c]| + |M_ugmda_c[c]|'
-  subsystem: 'Peptidoglycan biosynthesis '
+  subsystem: Peptidoglycan biosynthesis
 - id: R_UHGADA
   name: UDP-3-O-acetylglucosamine deacetylase
   genes: sll1508
