iJN678: Add unparsable gene information

--- a/sbml/iJN678/reactions.yaml
+++ b/sbml/iJN678/reactions.yaml
@@ -1988,6 +1988,7 @@
   subsystem: Transport
 - id: R_GLUttrappp
   name: TRAP system glutamate simport (periplasm)
+  genes: (sll1102 and sll1103and sll1104)
   equation: '|M_h_p[p]| + |M_glu_DASH_L_p[p]| => |M_h_c[c]| + |M_glu_DASH_L_c[c]|'
   subsystem: Transport
 - id: R_GLXCL
