Strip whitespace from iJO1366 properties

--- a/sbml/iJO1366/reactions.yaml
+++ b/sbml/iJO1366/reactions.yaml
@@ -5475,7 +5475,7 @@
   genes: b3870 or b1297
   equation: '|M_atp_c[c]| + |M_glu_DASH_L_c[c]| + |M_nh4_c[c]| => |M_adp_c[c]| +
     |M_gln_DASH_L_c[c]| + |M_h_c[c]| + |M_pi_c[c]|'
-  subsystem: 'Glutamate Metabolism '
+  subsystem: Glutamate Metabolism
 - id: R_GLNTRS
   name: Glutaminyl-tRNA synthetase
   genes: b0680
@@ -5551,7 +5551,7 @@
   genes: b3212 and b3213
   equation: '|M_akg_c[c]| + |M_gln_DASH_L_c[c]| + |M_h_c[c]| + |M_nadph_c[c]| =>
     (2) |M_glu_DASH_L_c[c]| + |M_nadp_c[c]|'
-  subsystem: 'Glutamate Metabolism '
+  subsystem: Glutamate Metabolism
 - id: R_GLUTRR
   name: glutamyl-tRNA reductase
   genes: b1210
