Strip whitespace from iMA871 properties

--- a/sbml/iMA871/compounds.yaml
+++ b/sbml/iMA871/compounds.yaml
@@ -2109,10 +2109,10 @@
   name: Tetradecenoyl-carnitine
 - id: M_C141COA
   name: Tetradecenoyl-CoA
-  formula: 'C35H60N7O17P3S '
+  formula: C35H60N7O17P3S
 - id: M_C141COAm
   name: Tetradecenoyl-CoA
-  formula: 'C35H60N7O17P3S '
+  formula: C35H60N7O17P3S
 - id: M_C141e
   name: Tetradecenoate
   formula: C14H25O2
