Strip whitespace from iMM1415 properties

--- a/sbml/iMM1415/reactions.yaml
+++ b/sbml/iMM1415/reactions.yaml
@@ -882,11 +882,11 @@
 - id: R_ACGALK
   name: ACGALK
   equation: '|M_atp_c[c]| + |M_acgal_c[c]| => |M_h_c[c]| + |M_acgal1p_c[c]| + |M_adp_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_ACGALK2
   name: ACGALK2
   equation: '|M_acgal_c[c]| + |M_itp_c[c]| => |M_idp_c[c]| + |M_acgal1p_c[c]| + |M_h_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_ACGALtlg
   name: ACGALtlg
   equation: '|M_acgal_g[g]| <=> |M_acgal_c[c]|'
@@ -899,22 +899,22 @@
   name: ACGAM2E
   genes: '19703'
   equation: '|M_acgam_c[c]| <=> |M_acmana_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_ACGAM6PSi
   name: ACGAM6PSi
   genes: '54342'
   equation: '|M_accoa_c[c]| + |M_gam6p_c[c]| => |M_h_c[c]| + |M_coa_c[c]| + |M_acgam6p_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_ACGAMK
   name: ACGAMK
   genes: '56174'
   equation: '|M_atp_c[c]| + |M_acgam_c[c]| => |M_h_c[c]| + |M_adp_c[c]| + |M_acgam6p_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_ACGAMPM
   name: ACGAMPM
   genes: '109785'
   equation: '|M_acgam6p_c[c]| <=> |M_acgam1p_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_ACGAMtly
   name: ACGAMtly
   equation: '|M_acgam_l[l]| => |M_acgam_c[c]|'
@@ -995,16 +995,16 @@
   genes: '94181'
   equation: '|M_pep_c[c]| + |M_acmanap_c[c]| + |M_h2o_c[c]| => |M_acnamp_c[c]| +
     |M_pi_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_ACNAM9PL2
   name: ACNAM9PL2
   genes: '94181'
   equation: '|M_pep_c[c]| + |M_man6p_c[c]| + |M_h2o_c[c]| => |M_pi_c[c]| + |M_kdnp_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_ACNAMPH
   name: ACNAMPH
   equation: '|M_acnamp_c[c]| + |M_h2o_c[c]| => |M_pi_c[c]| + |M_acnam_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_ACNAMlt
   name: ACNAMlt
   genes: '235504'
@@ -1025,7 +1025,7 @@
 - id: R_ACNMLr
   name: ACNMLr
   equation: '|M_acnam_c[c]| <=> |M_acmana_c[c]| + |M_pyr_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_ACOAD10m
   name: ACOAD10m
   genes: 66885 or 11364
@@ -1441,7 +1441,7 @@
   name: AGDC
   genes: '245847'
   equation: '|M_h2o_c[c]| + |M_acgam6p_c[c]| => |M_ac_c[c]| + |M_gam6p_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_AGLPC
   name: AGLPC
   equation: '|M_ak2g_hs_c[c]| + |M_cdpchol_c[c]| => |M_h2o_c[c]| + |M_cmp_c[c]| +
@@ -1827,7 +1827,7 @@
   name: AMANK
   genes: 50798 or 56174
   equation: '|M_atp_c[c]| + |M_acmana_c[c]| => |M_h_c[c]| + |M_acmanap_c[c]| + |M_adp_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_AMCOXO
   name: AMCOXO
   equation: '|M_nadph_c[c]| + |M_amuco_c[c]| + |M_h2o_c[c]| + |M_h_c[c]| => |M_2oxoadp_c[c]|
@@ -3299,12 +3299,12 @@
   name: CHTNASE
   genes: 81600 or 67729 or 71884
   equation: (2) |M_h2o_c[c]| + |M_chtn_c[c]| => (3) |M_acgam_c[c]|
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_CHTNASEe
   name: CHTNASEe
   genes: '81600'
   equation: '|M_chtn_e[e]| + (2) |M_h2o_e[e]| => (3) |M_acgam_e[e]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_CITL
   name: CITL
   genes: '69634'
@@ -3430,12 +3430,12 @@
   name: CMPSAS
   genes: '12764'
   equation: '|M_acnam_c[c]| + |M_ctp_c[c]| => |M_cmpacna_c[c]| + |M_ppi_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_CMPSASn
   name: CMPSASn
   genes: '12764'
   equation: '|M_acnam_n[n]| + |M_ctp_n[n]| => |M_ppi_n[n]| + |M_cmpacna_n[n]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_CO2t
   name: CO2t
   equation: '|M_co2_e[e]| <=> |M_co2_c[c]|'
@@ -7114,7 +7114,7 @@
   name: G6PDA
   genes: 67980 or 26384
   equation: '|M_h2o_c[c]| + |M_gam6p_c[c]| => |M_nh4_c[c]| + |M_f6p_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_G6PDH1er
   name: G6PDH1er
   genes: '100198'
@@ -7626,7 +7626,7 @@
   name: GF6PTA
   genes: 14583 or 14584
   equation: '|M_gln__L_c[c]| + |M_f6p_c[c]| => |M_glu__L_c[c]| + |M_gam6p_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_GFUCS
   name: GFUCS
   genes: '22122'
@@ -8871,7 +8871,7 @@
   name: HEX10
   genes: 103988 or 15277 or 15275 or 216019 or 212032
   equation: '|M_gam_c[c]| + |M_atp_c[c]| => |M_gam6p_c[c]| + |M_h_c[c]| + |M_adp_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_HEX4
   name: HEX4
   genes: 15275 or 103988 or 212032 or 15277 or 216019
@@ -9535,7 +9535,7 @@
 - id: R_KDNH
   name: KDNH
   equation: '|M_h2o_c[c]| + |M_kdnp_c[c]| => |M_kdn_c[c]| + |M_pi_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_KHK
   name: KHK
   genes: '16548'
@@ -13752,7 +13752,7 @@
 - id: R_RETNGLCt2
   name: RETNGLCt2
   equation: '|M_13__cis__retnglc_c[c]| => |M_13__cis__retnglc_e[e]|'
-  subsystem: 'Transport, Endoplasmic Reticular '
+  subsystem: Transport, Endoplasmic Reticular
 - id: R_RETNGLCt2r
   name: RETNGLCt2r
   equation: '|M_13__cis__retnglc_r[r]| => |M_13__cis__retnglc_c[c]|'
@@ -13760,7 +13760,7 @@
 - id: R_RETNGLCtr
   name: RETNGLCtr
   equation: '|M_retnglc_r[r]| => |M_retnglc_c[c]|'
-  subsystem: 'Transport, Endoplasmic Reticular '
+  subsystem: Transport, Endoplasmic Reticular
 - id: R_RETNt
   name: RETNt
   equation: '|M_retn_c[c]| <=> |M_retn_e[e]|'
@@ -13768,11 +13768,11 @@
 - id: R_RETNtr
   name: RETNtr
   equation: '|M_retn_c[c]| => |M_retn_r[r]|'
-  subsystem: 'Transport, Endoplasmic Reticular '
+  subsystem: Transport, Endoplasmic Reticular
 - id: R_RETNtr2
   name: RETNtr2
   equation: '|M_13__cis__retn_c[c]| => |M_13__cis__retn_r[r]|'
-  subsystem: 'Transport, Endoplasmic Reticular '
+  subsystem: Transport, Endoplasmic Reticular
 - id: R_RETt
   name: RETt
   equation: '|M_retinol_e[e]| => |M_retinol_c[c]|'
@@ -15784,22 +15784,22 @@
   name: UAG2EMAi
   genes: '50798'
   equation: '|M_uacgam_c[c]| + |M_h2o_c[c]| => |M_acmana_c[c]| + |M_h_c[c]| + |M_udp_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_UAG4E
   name: UAG4E
   genes: '74246'
   equation: '|M_uacgam_c[c]| <=> |M_udpacgal_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_UAGALDP
   name: UAGALDP
   equation: '|M_utp_c[c]| + |M_acgal1p_c[c]| + |M_h_c[c]| => |M_udpacgal_c[c]| +
     |M_ppi_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_UAGDP
   name: UAGDP
   genes: (107652) or
   equation: '|M_utp_c[c]| + |M_acgam1p_c[c]| + |M_h_c[c]| => |M_uacgam_c[c]| + |M_ppi_c[c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_UDPACGALtl
   name: UDPACGALtl
   equation: '|M_udpacgal_c[c]| <=> |M_udpacgal_l[l]|'
