iMM1415: Add unparsable gene information

--- a/sbml/iMM1415/reactions.yaml
+++ b/sbml/iMM1415/reactions.yaml
@@ -12394,6 +12394,10 @@
   subsystem: Transport, Extracellular
 - id: R_PDE1
   name: PDE1
+  genes: (54611) or (18578) or (18584) or (18574) or (18583) or (110385) or (18583)
+    or (18575) or (238871) or (18573) or (18576) or (218461) or (23984) or (18584)
+    or (18576) or  or (207728) or (18573) or (18584) or (241489) or (29863) or (18584)
+    or (18584)
   equation: '|M_h2o_c[c]| + |M_camp_c[c]| => |M_amp_c[c]| + |M_h_c[c]|'
   subsystem: Nucleotides
 - id: R_PDE1g
@@ -12403,6 +12407,10 @@
   subsystem: Nucleotides
 - id: R_PDE4
   name: PDE4
+  genes: (54611) or (110855) or  or (242202) or  or (18573) or  or (241489) or (242202)
+    or (23984) or  or (225600 and 18587 and 78600) or (18576) or  or  or (18575)
+    or (18573) or (207728) or  or (18574) or (242202) or  or  or  or  or  or  or  or
+    (18576) or  or  or (225600 and 110855 and 18582 and 18587 and 18588) or
   equation: '|M_h2o_c[c]| + |M_35cgmp_c[c]| => |M_h_c[c]| + |M_gmp_c[c]|'
   subsystem: Nucleotides
 - id: R_PDE4g
@@ -12910,6 +12918,7 @@
   subsystem: Transport, Extracellular
 - id: R_PIt7ir
   name: PIt7ir
+  genes: (319848) or (105355) or  or (20504)
   equation: '|M_pi_e[e]| + (3) |M_na1_e[e]| => |M_pi_c[c]| + (3) |M_na1_c[c]|'
   subsystem: Transport, Extracellular
 - id: R_PIt8
@@ -15788,6 +15797,7 @@
   subsystem: 'Aminosugar Metabolism '
 - id: R_UAGDP
   name: UAGDP
+  genes: (107652) or
   equation: '|M_utp_c[c]| + |M_acgam1p_c[c]| + |M_h_c[c]| => |M_uacgam_c[c]| + |M_ppi_c[c]|'
   subsystem: 'Aminosugar Metabolism '
 - id: R_UDPACGALtl
