Strip whitespace from iND750 properties

--- a/sbml/iND750/reactions.yaml
+++ b/sbml/iND750/reactions.yaml
@@ -1241,7 +1241,7 @@
   genes: YLR308W or YLR307W
   equation: '|M_chitin_c[C_c]| + |M_h2o_c[C_c]| => |M_ac_c[C_c]| + |M_chitos_c[C_c]|
     + |M_h_c[C_c]|'
-  subsystem: 'Aminosugar Metabolism '
+  subsystem: Aminosugar Metabolism
 - id: R_CHTNS
   name: chitin synthase
   genes: YNL192W or YBR023C or YBR038W
