iRS1563: Add unparsable gene information

--- a/sbml/iRS1563/reactions.yaml
+++ b/sbml/iRS1563/reactions.yaml
@@ -1007,6 +1007,7 @@
     + |M_C00004_c[c]|'
 - id: R_R00705_c
   name: 3-Oxopropanoate:NAD+ oxidoreductase (decarboxylating, CoA-acetylating)
+  genes: AC233853.1_FG003 or AC233853.1_FG003 or or AC233853.1_FG003 or AC233853.1_FG003
   equation: '|M_C00003_c[c]| + |M_C00010_c[c]| + |M_C00222_c[c]| <=> |M_C00011_c[c]|
     + |M_C00004_c[c]| + |M_C00024_c[c]|'
 - id: R_R00708_c
@@ -2691,6 +2692,9 @@
     + |M_C00014_c[c]| + |M_C00414_c[c]|'
 - id: R_R02235_c
   name: Dihydrofolate:NAD+ oxidoreductase
+  genes: (GRMZM2G152686 and GRMZM2G152686 or (GRMZM2G003883 and GRMZM2G003883 and
+    GRMZM2G004534 and GRMZM2G003883 and GRMZM2G003883 and GRMZM2G003883 and GRMZM2G008714
+    and GRMZM2G003883 and GRMZM2G150098)
   equation: '|M_C00080_c[c]| + |M_C00004_c[c]| + |M_C00504_c[c]| => |M_C00003_c[c]|
     + |M_C00415_c[c]|'
 - id: R_R02241_c
@@ -3873,6 +3877,8 @@
   equation: '|M_C00003_c[c]| + |M_C02972_c[c]| => |M_C00080_c[c]| + |M_C00004_c[c]|
     + |M_C02051_c[c]|'
 - id: R_R03824_c
+  genes: (GRMZM2G057823 and GRMZM2G066024 and GRMZM2G066024 and GRMZM2G066024) or
+    GRMZM2G057823 or
   equation: '|M_C05435_c[c]| => |M_C02094_c[c]|'
 - id: R_R03840_c
   name: ATP:5'-dephosphopolynucleotide 5'-phosphotransferase
@@ -4647,6 +4653,8 @@
   equation: '|M_C03193_c[c]| + |M_C05689_c[c]| => |M_C00012_c[c]| + |M_C05695_c[c]|'
 - id: R_R04936_c
   name: Se-Adenosylselenohomocysteine hydrolase
+  genes: (GRMZM2G175499 and GRMZM2G128682) or GRMZM2G136106 or (GRMZM2G136106 and
+    and GRMZM2G175499 and GRMZM2G043943 and GRMZM2G012328) or GRMZM2G125356
   equation: '|M_C00001_c[c]| + |M_C05692_c[c]| => |M_C00212_c[c]| + |M_C05698_c[c]|'
 - id: R_R04939_c
   equation: '|M_C05691_c[c]| + |M_C05693_c[c]| => |M_C05692_c[c]| + |M_C05694_c[c]|'
