iRS1597: Add unparsable gene information

--- a/sbml/iRS1597/reactions.yaml
+++ b/sbml/iRS1597/reactions.yaml
@@ -1340,6 +1340,8 @@
   subsystem: ' '
 - id: R_R01138_LSQBKT_c_RSQBKT_
   name: dATP:pyruvate 2-O-phosphotransferase
+  genes: (AT1G32440 and AT5G52920 or (AT3G04050 and AT3G25960 and AT3G52990 and AT3G55650
+    and AT3G55810 and AT4G26390 and AT5G08570 and AT5G56350 and AT5G63680) or AT3G49160
   equation: '|M_C00080_c[c]| + |M_C00074_c[c]| + |M_C00206_c[c]| <=> |M_C00022_c[c]|
     + |M_C00131_c[c]|'
   subsystem: ' '
@@ -2512,6 +2514,8 @@
   subsystem: ' '
 - id: R_R02362_LSQBKT_c_RSQBKT_
   name: Pectin pectylhydrolase
+  genes: (AT1G11590 and AT5G04970) or AT1G53830 or (AT2G45220 and and AT3G43270 and
+    AT5G19730 and AT5G49180) or AT2G47030
   equation: '|M_C00001_c[c]| + |M_C00714_c[c]| => |M_C00132_c[c]| + |M_C00470_c[c]|'
   subsystem: ' '
 - id: R_R02371_LSQBKT_c_RSQBKT_
@@ -6884,6 +6888,7 @@
   subsystem: ' '
 - id: R_R07489_LSQBKT_c_RSQBKT_
   name: L-cysteine:[ThiI] sulfurtransferase
+  genes: AT2G28850 or AT2G28860 or or AT2G34490 or AT2G34500
   equation: '|M_C05442_c[c]| => |M_C01753_c[c]|'
   subsystem: ' '
 - id: R_R07491_LSQBKT_c_RSQBKT_
