Strip whitespace from iSS884 properties

--- a/sbml/iSS884/reactions.yaml
+++ b/sbml/iSS884/reactions.yaml
@@ -2444,7 +2444,7 @@
   name: protein N6-(dihydrolipoyl)lysine:NAD+ oxidoreductase
   genes: PICST_36951
   equation: '|M_m955[C_m]| + |M_m956[C_m]| <=> |M_m946[C_m]| + |M_m951[C_m]| + |M_m957[C_m]|'
-  subsystem: 'general reaction '
+  subsystem: general reaction
 - id: R_r288
   name: dihydrolipoylprotein:NAD+ oxidoreductase
   genes: PICST_36951
