iCB925: Add unparsable gene information

--- a/sbml/iCB925/reactions.yaml
+++ b/sbml/iCB925/reactions.yaml
@@ -1853,6 +1853,7 @@
   subsystem: H2 Synthesis
 - id: R_FDXNRy
   name: FDXNRy
+  genes: ( Cbei_0661 Cbei_2182 )
   equation: '|M_fdxrd_c[C_c]| + |M_h_c[C_c]| + |M_nadp_c[C_c]| => |M_fdxox_c[C_c]|
     + |M_nadph_c[C_c]|'
   subsystem: H2 Synthesis
